# Multimodal-DARP-Fleet-Sizing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
resources/test/instances/PT Shortest Path/basic_debug_instance/: edges.csv
resources/test/instances/basic_debug_instance/: PT_lines.csv  edges.csv  nodes.csv  params
resources/test/instances/two_lines_debug_instance/: PT_lines.csv
src/: TimeWindow.cpp  TimeWindow.h
src/ShortestPath/: ShortestPath.h  ShortestPathContainer.h  TimeDependentShortestPathContainer.h
src/ShortestPath/Transit/: TransitAlgorithmState.cpp  TransitAlgorithmState.h  TransitPrecomputeIterationContainer.h  TransitShortestPath.h  TransitShortestPathContainer.cpp  TransitShortestPathContainer.h  TransitShortestPathIterationSolutionContainer.h  TransitShortestPathPrecompute.cpp  TransitShortestPathPrecompute.h  TransitStateContainer.h  XatDeltaIterationSolutionContainer.h
src/ShortestPath/Vehicle/: ClosestDestinationsContainer.h  MatrixShortestPathContainer.h  VehicleDestination.h  VehiclePathState.h  VehicleShortestPath.cpp  VehicleShortestPath.h  VehicleShortestPathCalculation.cpp  VehicleShortestPathCalculation.h  VehicleShortestPathContainer.cpp  VehicleShortestPathContainer.h
src/algorithm/DARP/Heuristics/: BestInsertionHeuristic.cpp  BestInsertionHeuristic.h
src/algorithm/Multimodal/Heuristics/: SimpleModularHeuristic.cpp  SimpleModularHeuristic.h  TransitAccess.h
src/instance/: Instance.cpp  Instance.h  SAEVehicle.cpp  SAEVehicle.h  VehicleType.cpp  VehicleType.h
src/instance/graph/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Line.cpp  Line.h  LineStop.cpp  LineStop.h  Node.cpp  Node.h
src/instance/requests/: Request.cpp  Request.h
src/instance/service/: CSVIterator.cpp  CSVIterator.h  CSVRange.cpp  CSVRow.cpp  CSVRow.h
src/instance/services/CSV/: CSVIterator.cpp  CSVRange.h  CSVRow.cpp  CSVRow.h
src/instance/services/DatFile/: DATRow.cpp
src/instance/services/visualisation/: graph_vis.py
src/routes/: KeyPoint.cpp  KeyPoint.h  RequestKeyPoint.cpp  RequestKeyPoint.h  RequestRoute.cpp  RequestRoute.h  SAEVKeyPoint.cpp  SAEVKeyPoint.h  SAEVRoute.cpp  SAEVRoute.h
src/routes/requests/: RequestKeyPoint.cpp  RequestKeyPoint.h  RequestRoute.cpp  RequestRoute.h
src/routes/vehicle/: BestInsertionQueue.h  BestRequestInsertion.h  SAEVKeyPoint.cpp  SAEVKeyPoint.h  SAEVRoute.cpp  SAEVRoute.h
src/routes/vehicle/propagation/: SAEVRouteChange.cpp  SAEVRouteChange.h  SAEVRouteChangelist.cpp  SAEVRouteChangelist.h
src/services/CSV/: CSVIterator.h  CSVRange.cpp  CSVRange.h  CSVRow.cpp  CSVRow.h
src/services/DatFile/: DATRow.h
src/services/visualisation/: graph_vis.py
src/utils/: Constants.h  Globals.h  InstanceGenerator.cpp  InstanceGenerator.h  RequestsGenerator.cpp  RequestsGenerator.h  SearchAlgorithms.h  Timing.h
src/utils/Instance Generation/Graph/: GraphGenerator.h  OSRMGraphGenerator.h  PTLineGenerationParameters.h
src/utils/Instance Generation/Requests/: RequestGenerationParameters.h  RequestsGenerator.h
src/utils/Python visualiser/: final.py  graphe.py  main.py  voiture.py
test/: CMakeLists.txt  debug.cpp
test/src/: BestInsertionHeuristicDebug.cpp  ConstraintPropagationDebug.cpp  GraphPreprocessDebug.cpp  LineUnitTests.cpp  MultimodalInsertionHeuristicDebug.cpp  TransitPreprocessDebug.cpp  TransitPreprocessUnitTest.cpp
